Fix small text size on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,6 @@ body {
     color: #442235ff;
     background-color: #e9bcb7ff;
     font-family: 'Inconsolatas', monospace;
-    font-size: 120%;
 }
 
 a,
@@ -16,7 +15,6 @@ a:hover {
   text-decoration: none;
 }
 
-
 .centerpiece {
     display: table-cell;
     vertical-align: middle;
@@ -27,4 +25,12 @@ a:hover {
     width: 100%;
     height: 100%;
     min-height: 100%;
+}
+
+.vertical-center {
+    min-height: 100%;
+    min-height: 100vh;
+  
+    display: flex;
+    align-items: center;
 }
